Centered services on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -672,6 +672,21 @@ section {
   color: #fff;
 }
 
+/* !  Align services centrally on md devices */
+@media (max-width: 768px) {
+  #services {
+    text-align: center;
+    margin: auto;
+  }
+}
+
+/* !  Align services centrally on sm devices */
+@media (max-width: 576px) {
+  #services {
+    text-align: center;
+    margin: auto;
+  }
+}
 
 /*--------------------------------------------------------------
 # Cta
@@ -827,7 +842,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"]:hover {
-  background: #8ec4dd;
+  background: hsl(263, 90%, 70%);
 }
 
 @-webkit-keyframes animate-loading {
@@ -954,39 +969,6 @@ section {
 
 #footer .footer-top .footer-links ul a:hover {
   color: #c6a2e3;
-}
-
-#footer .footer-top .footer-newsletter form {
-  margin-top: 30px;
-  background: #fff;
-  padding: 6px 10px;
-  position: relative;
-  border-radius: 4;
-}
-
-#footer .footer-top .footer-newsletter form input[type="email"] {
-  border: 0;
-  padding: 4px;
-  width: calc(100% - 110px);
-}
-
-#footer .footer-top .footer-newsletter form input[type="submit"] {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  border: 0;
-  background: none;
-  font-size: 16px;
-  padding: 0 20px;
-  background: #67b0d1;
-  color: #fff;
-  transition: 0.3s;
-  border-radius: 4;
-}
-
-#footer .footer-top .footer-newsletter form input[type="submit"]:hover {
-  background: #409cc5;
 }
 
 #footer .copyright {
